# ChibiProject4ESPIDF

./: .gitmodules  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  audio.c  audio.h  button.c  button.h  card.c  card.h  idf_component.yml  main.cpp  screen.c  screen.h
main/core/: actuator.cpp  actuator.h  archive.cpp  archive.h  font.cpp  font.h  game.cpp  game.h  line.cpp  line.h  paintevent.cpp  paintevent.h  render.cpp  render.h  script.cpp  script.h  scriptfunction.cpp  scriptfunction.h  stage.cpp  stage.h  variable.cpp  variable.h
main/core/action/: action.h  floataction.cpp  floataction.h  moveaction.cpp  moveaction.h  popaction.cpp  popaction.h  sheetaction.cpp  sheetaction.h  walkaction.cpp  walkaction.h
main/core/assets/: imageassets.cpp  imageassets.h  sheetassets.cpp  sheetassets.h
main/core/data/: equip.cpp  equip.h  image.cpp  image.h
main/core/object/: characterobject.cpp  characterobject.h  variableobject.cpp  variableobject.h
main/core/sprite/: animationsprite.cpp  animationsprite.h  charactershadowsprite.cpp  charactershadowsprite.h  charactersprite.cpp  charactersprite.h  container.cpp  container.h  imagesprite.cpp  imagesprite.h  listsprite.cpp  listsprite.h  rectsprite.cpp  rectsprite.h  textsprite.cpp  textsprite.h  trigger.cpp  trigger.h
main/core/utils/: textutils.cpp  textutils.h
main/inf/: file.cpp  file.h  log.cpp
